--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -4,13 +4,17 @@
 
   </head>
   <body>
-    <h1>Pages#home</h1>
     <div class="banner">
       <div class="container">
-
       </div>
     </div>
-
+    <div class="row d-flex justify-content-center mt-5">
+      <div class="find-courses col-md-10">
+        <div class="container">
+          <h2>Partagez vos compétences !</h2>
+        </div>
+      </div>
+    </div>
   </body>
 </html>
 
