--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,38 +11,8 @@
     <%#= stylesheet_pack_tag 'application', media: 'all' %> <!-- Uncomment if you import CSS in app/javascript/packs/application.js -->
   </head>
   <body>
-    <div class="navbar navbar-expand-sm navbar-light navbar">
-      <div class="navbar-inner flexbox">
-        <%= link_to "#", class: "navbar-brand" do %>
-         <%= image_tag("rentskills.png", :alt => "rentskills feed") %>
-        <% end %>
+    <%= render "shared/navbar" %>
 
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
-        </button>
-
-
-        <div class="collapse navbar-collapse" id="navbarSupportedContent">
-          <ul class="navbar-nav mr-auto">
-            <li class="nav-item active">
-              <%= link_to "Home", "#", class: "nav-link" %>
-            </li>
-            <li class="nav-item">
-              <%= link_to "Messages", "#", class: "nav-link" %>
-            </li>
-            <li class="nav-item">
-              <%= link_to "Sign-in", "#", class: "btn btn-primary" %>
-            </li>
-            <li class="nav-item dropdown">
-              <%= image_tag "https://kitt.lewagon.com/placeholder/users/Artmen12", class: "avatar dropdown-toggle", id: "navbarDropdown", data: { toggle: "dropdown" }, 'aria-haspopup': true, 'aria-expanded': false %>
-              <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdown">
-                <%= link_to "Sign-out", "#", class: "dropdown-item" %>
-              </div>
-            </li>
-          </ul>
-        </div>
-      </div>
-    </div>
     <p class="notice"><%= notice %></p>
     <p class="alert"><%= alert %></p>
 
