--- a/app/views/owner/courses/edit.html.erb
+++ b/app/views/owner/courses/edit.html.erb
@@ -2,7 +2,7 @@
   <div class="row">
     <div class="col-xs-12 col-sm-10 col-sm-offset-1">
       <h1>Edit your course</h1>
-      <%= simple_form_for @course do |c| %>
+      <%= simple_form_for [:owner, @course] do |c| %>
         <%= c.input :title %>
         <%= c.input :description %>
         <%= c.input :duration %>
