new and create view

--- a/app/assets/stylesheets/config/_colors.scss
+++ b/app/assets/stylesheets/config/_colors.scss
@@ -8,3 +8,8 @@ $orange: #E67E22;
 $green: #1EDD88;
 $gray: #0E0000;
 $light-gray: #F4F4F4;
+$orange: #ef6c57;
+$blue-water: #7ed3b2;
+$blue-light: #b9e6d3;
+$light-grey: #f2f2f2;
+
