Owner index ok + components for index

--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -1,6 +1,6 @@
 <div class="navbar navbar-expand-sm navbar-light navbar">
   <div class="navbar-inner flexbox">
-    <%= link_to "#", class: "navbar-brand" do %>
+    <%= link_to "/", class: "navbar-brand" do %>
      <%= image_tag("rentskills.png", :alt => "rentskills feed") %>
     <% end %>
 
