--- a/app/views/courses/index.html.erb
+++ b/app/views/courses/index.html.erb
@@ -1,4 +1,15 @@
-<h1>coucou index</h1>
-<% @courses.each do |course| %>
-  <%= course.title %>
-<% end %>
+<h1>All courses available</h1>
+
+<div class="d-flex owner-dashboard">
+  <div class="info-content pl-2 pr-2">
+    <div class="cards">
+      <% @courses.each do |course| %>
+      <div class="card" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.3)), url(https://images.unsplash.com/photo-1496886077455-6e206da90837?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=800&q=60)">
+          <%= link_to owner_course_path(course) do %>
+            <h2><%= course.title %></h2>
+          <% end %>
+        </div>
+      <% end %>
+    </div>
+  </div>
+</div>
