--- a/app/views/owner/courses/show.html.erb
+++ b/app/views/owner/courses/show.html.erb
@@ -38,6 +38,11 @@
     <%= @course.date %>
   </p>
 
-  <%= link_to 'Edit', edit_owner_course_path(@course) %> |
-  <%= link_to 'Delete', owner_course_path(@course), method: :delete, data: { confirm: 'Are you sure?' } %>
+  <%= link_to edit_owner_course_path(@course) do %>
+    <i class="fas fa-pencil-alt"></i>
+  <% end %> |
+
+  <%= link_to owner_course_path(@course), method: :delete, data: { confirm: 'Are you sure?' } do %>
+    <i class="fas fa-trash-alt"></i>
+  <% end %>
 </div>
