--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -4,17 +4,15 @@
 
   </head>
   <body>
-    <div class="banner">
-      <div class="container">
-      </div>
-    </div>
-    <div class="row d-flex justify-content-center mt-5">
-      <div class="find-courses col-md-10">
-        <div class="container">
-          <h2>Partagez vos compétences !</h2>
+
+    <div class="d-flex justify-content-center">
+      <div class="card bg-dark text-white home-image">
+        <div class="card-img-overlay d-flex align-items-center justify-content-center">
+          <h2 class="card-title"><%= link_to 'See all courses around you', courses_path %></h2>
         </div>
       </div>
     </div>
+
   </body>
 </html>
 
