courses show and booking create

--- a/app/views/owner/courses/new.html.erb
+++ b/app/views/owner/courses/new.html.erb
@@ -10,7 +10,7 @@
         <%= f.input :duration, label: "Duration (min)" %>
         <%= f.input :date %>
         <%= f.input :price, label: "Price (€)" %>
-        <%= f.submit class: 'btn btn-primary form-button mt-2' %>
+        <%= f.submit class: 'btn btn-primary button mt-2' %>
       <% end %>
     </div>
   </div>
