--- a/app/views/bookings/show.html.erb
+++ b/app/views/bookings/show.html.erb
@@ -5,7 +5,7 @@
   </p>
 
   <p>
-    <h1 class="text-center"> <%= @Your booking %> </h1>
+    <h1 class="text-center">Your booking</h1>
   </p>
 
   <div>
