changed home pic

--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -8,10 +8,9 @@ body {
 }
 
 .home-image {
-  background-image: linear-gradient(rgba(255, 255, 255, 0.5), rgba(100, 100, 100, 0.5)), url(image_path('funky.jpg'));
+  background-image: linear-gradient(rgba(255, 255, 255, 0.5), rgba(100, 100, 100, 0.5)), url(image_path('layout.jpg'));
   background-size: cover;
-  width: 1000px;
-  height: 1000px;
+  height: 700px;
 }
 
 .card-title {
