--- a/app/views/courses/show.html.erb
+++ b/app/views/courses/show.html.erb
@@ -11,7 +11,7 @@
   </div>
   <br>
   <p>
-    <strong>Description: njnj</strong>
+    <strong>Description:</strong>
     <%= @course.description %>
   </p>
 
