--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -5,14 +5,14 @@
   </head>
   <body>
 
-    <div class="d-flex justify-content-center">
-      <div class="card bg-dark text-white home-image">
+<!--     <div class="d-flex justify-content-center">
+ -->      <div class="card bg-dark text-white home-image">
         <div class="card-img-overlay d-flex align-items-center justify-content-center">
           <h2 class="card-title"><%= link_to 'See all courses around you', courses_path %></h2>
         </div>
       </div>
-    </div>
-
+<!--     </div>
+ -->
   </body>
 </html>
 
