--- a/app/views/bookings/index.html.erb
+++ b/app/views/bookings/index.html.erb
@@ -1,4 +1,11 @@
-<h1>All your bookings</h1>
+<div class="d-flex">
+  <h1 class="flex-grow-1">All your bookings</h1>
+  <div>
+    <%= link_to courses_path, :class => "btn p-3 m-3 form-button btn-secondary" do %>
+      <i class="fas fa-long-arrow-alt-left"> Back to courses list</i>
+    <% end %>
+  </div>
+</div>
 
 <div class="d-flex owner-dashboard">
   <div class="info-content pl-2 pr-2">
@@ -13,3 +20,4 @@
     </div>
   </div>
 </div>
+
