--- a/app/views/courses/index.html.erb
+++ b/app/views/courses/index.html.erb
@@ -1,4 +1,7 @@
-<h1>All courses available</h1>
+<div class="d-flex">
+  <h1 class="flex-grow-1">All courses available</h1>
+  <%= link_to "Your Bookings", bookings_path, :class => "btn p-3 m-3 form-button btn-secondary" %>
+</div>
 
 <div class="d-flex owner-dashboard">
   <div class="info-content pl-2 pr-2">
