--- a/app/views/owner/courses/new.html.erb
+++ b/app/views/owner/courses/new.html.erb
@@ -10,6 +10,7 @@
         <%= f.input :duration, label: "Duration (min)" %>
         <%= f.input :date %>
         <%= f.input :price, label: "Price (€)" %>
+        <%= f.input :image_url, label: "Add a picture for your course (url)" ,placeholder: 'https://www.mybeautifulpic.com' %>
         <%= f.submit class: 'btn btn-primary button mt-2' %>
       <% end %>
     </div>
