--- a/app/views/bookings/show.html.erb
+++ b/app/views/bookings/show.html.erb
@@ -42,7 +42,7 @@
     <%= @booking.course.date %>
   </p>
 
-  <%= link_to courses_path, :class => "btn p-3 mr-3 mb-4 form-button btn-secondary" do %>
+  <%= link_to bookings_path, :class => "btn p-3 mr-3 mb-4 form-button btn-secondary" do %>
   <i class="fas fa-long-arrow-alt-left"> Back</i>
   <% end %>
 
