--- a/app/views/owner/courses/index.html.erb
+++ b/app/views/owner/courses/index.html.erb
@@ -15,7 +15,8 @@
           <% end %>
         </div>
       <% end %>
-      <%= link_to "Ajouter un cours", new_owner_course_path, class: "btn btn-primary" %>
     </div>
   </div>
 </div>
+      <%= link_to "Ajouter un cours", new_owner_course_path, class: "btn btn-primary" %>
+      <%= link_to "View courses list", courses_path, class: "btn btn-secondary" %>
