--- a/app/views/courses/show.html.erb
+++ b/app/views/courses/show.html.erb
@@ -1,37 +1,46 @@
 <div class="container">
-  <p>
-    <%= image_tag "https://kitt.lewagon.com/placeholder/users/Artmen12", class: "avatar" %>
-    <strong>Your email:</strong>
-  </p>
-  <p>
-    <h1 class="text-center"> <%= @course.title %> </h1>
-  </p>
-  <div>
-    <%= image_tag "https://cdn.pixabay.com/photo/2017/08/06/09/14/people-2590564_960_720.jpg" %>
+  <div class="row">
+    <div class="col-md-5">
+      <div>
+        <%= image_tag "https://cdn.pixabay.com/photo/2017/08/06/09/14/people-2590564_960_720.jpg", class: "course-img" %>
+      </div>
+    </div>
+    <div class="col-md-7">
+      <p>
+        <%= image_tag "https://kitt.lewagon.com/placeholder/users/Artmen12", class: "avatar" %>
+        <strong>Your email:</strong>
+      </p>
+      <p>
+        <h1 class="text-center"> <%= @course.title %> </h1>
+      </p>
+
+      <br>
+      <p>
+        <strong>Description:</strong>
+        <%= @course.description %>
+      </p>
+
+      <p>
+        <strong>Duration:</strong>
+        <%= @course.duration %> min
+      </p>
+
+      <p>
+        <strong>Address:</strong>
+        <%= @course.location %>
+      </p>
+
+      <p>
+        <strong>Price per person:</strong>
+        <%= @course.price %> €
+      </p>
+
+      <p>
+        <strong>When </strong>
+        <%= @course.date %>
+      </p>
+      <%= link_to "I want to participate !", course_bookings_path(@course), method: :post, :class => "btn btn-primary button" %>
+    </div>
   </div>
-  <br>
-  <p>
-    <strong>Description:</strong>
-    <%= @course.description %>
-  </p>
+</div>
 
-  <p>
-    <strong>Duration:</strong>
-    <%= @course.duration %> min
-  </p>
-
-  <p>
-    <strong>Address:</strong>
-    <%= @course.location %>
-  </p>
-
-  <p>
-    <strong>Price per person:</strong>
-    <%= @course.price %> €
-  </p>
-
-  <p>
-    <strong>When </strong>
-    <%= @course.date %>
-  </p>
-<%= link_to "I want to participate !", course_bookings_path(@course), method: :post, :class => "btn btn-primary form-button p-3" %>
