--- a/app/views/owner/courses/show.html.erb
+++ b/app/views/owner/courses/show.html.erb
@@ -45,4 +45,8 @@
   <%= link_to owner_course_path(@course), method: :delete, data: { confirm: 'Are you sure?' } do %>
     <i class="fas fa-trash-alt"></i>
   <% end %>
+
+  <%= link_to owner_courses_path, :class => "btn p-3 mr-3 mb-4 form-button btn-secondary" do %>
+    <i class="fas fa-long-arrow-alt-left"> Back</i>
+  <% end %>
 </div>
