--- a/app/views/bookings/index.html.erb
+++ b/app/views/bookings/index.html.erb
@@ -11,7 +11,7 @@
   <div class="info-content pl-2 pr-2">
     <div class="cards">
       <% @bookings.each do |booking| %>
-      <div class="card" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.3)), url(https://images.unsplash.com/photo-1537476102677-80bac0ab1d8b?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=634&q=80)">
+      <div class="card" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.3)), url(<%= booking.course.image_url %>)">
         <%= link_to course_booking_path(booking.course, booking) do %>
           <h2><%= booking.course.title %></h2>
         <% end %>
