--- a/app/views/owner/courses/new.html.erb
+++ b/app/views/owner/courses/new.html.erb
@@ -9,6 +9,7 @@
         <%= f.input :location%>
         <%= f.input :duration, label: "Duration (min)" %>
         <%= f.input :date %>
+        <%= f.input :participants, label: "Participants max" %>
         <%= f.input :price, label: "Price (€)" %>
         <%= f.input :image_url, label: "Add a picture for your course (url)" %>
         <%= f.submit class: 'btn btn-primary button mt-2' %>
