--- a/app/views/courses/show.html.erb
+++ b/app/views/courses/show.html.erb
@@ -31,6 +31,11 @@
       </p>
 
       <p>
+        <strong>Available places:</strong>
+        <%= @course.participants - @course.bookings.length %>
+      </p>
+
+      <p>
         <strong>Price per person:</strong>
         <%= @course.price %> €
       </p>
