--- a/app/views/owner/courses/show.html.erb
+++ b/app/views/owner/courses/show.html.erb
@@ -47,7 +47,7 @@
   </div>
 
 
-  <%= link_to owner_courses_path, :class => "btn p-3 mr-3 mb-4 form-button btn-secondary" do %>
+  <%= link_to owner_courses_path, :class => "btn p-3 mr-3 mb-4 button btn-secondary" do %>
     <i class="fas fa-long-arrow-alt-left"> Back</i>
   <% end %>
 
