--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -5,8 +5,7 @@
   </head>
   <body>
 
-
-     <div class="card bg-dark text-white home-image">
+     <div class="banner card bg-dark text-white home-image">
       <div class="card-img-overlay d-flex align-items-center justify-content-center">
         <h2 class="card-title"><%= link_to 'See all courses around you', courses_path %></h2>
       </div>
