--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -1,4 +1,5 @@
-<div class="navbar navbar-expand-sm navbar-light navbar">
+
+<div class="navbar-skills navbar-skills-white navbar-expand-sm navbar-light navbar fixed-top">
   <div class="navbar-inner flexbox">
     <%= link_to "/", class: "navbar-brand" do %>
      <%= image_tag("rentskills.png", :alt => "rentskills feed") %>
@@ -19,7 +20,7 @@
             <%= link_to "Messages", "#", class: "nav-link" %>
           </li>
           <li class="nav-item dropdown">
-            <%= image_tag "https://kitt.lewagon.com/placeholder/users/Artmen12", class: "avatar dropdown-toggle", id: "navbarDropdown", data: { toggle: "dropdown" }, 'aria-haspopup': true, 'aria-expanded': false %>
+            <%= image_tag @user.avatar, class: "avatar dropdown-toggle", id: "navbarDropdown", data: { toggle: "dropdown" }, 'aria-haspopup': true, 'aria-expanded': false %>
             <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdown">
               <%= link_to "My profil", owner_courses_path, method: :get, class: "dropdown-item" %>
               <%= link_to "Sign-out", destroy_user_session_path, method: :delete, class: "dropdown-item" %>
