your bookings instead of bookings AND delete button for booking DELETE

--- a/app/views/bookings/show.html.erb
+++ b/app/views/bookings/show.html.erb
@@ -47,7 +47,7 @@
   <i class="fas fa-long-arrow-alt-left"> Back</i>
   <% end %>
 
-  <%= link_to courses_path, :class => "btn p-3 mr-3 mb-4 form-button btn-danger" do %>
+  <%= link_to booking_path, method: :delete, :class => "btn p-3 mr-3 mb-4 form-button btn-danger" do %>
   <i class="fas fa-trash-alt"> Delete</i>
   <% end %>
 </div>
