--- a/app/views/owner/courses/edit.html.erb
+++ b/app/views/owner/courses/edit.html.erb
@@ -9,6 +9,8 @@
         <%= c.input :duration%>
         <%= c.input :date %>
         <%= c.input :price %>
+        <%= f.input :photo %>
+        <%= f.input :photo_cache, as: :hidden %>
         <%= c.submit class: 'btn btn-primary form-button mt-2' %>
       <% end %>
     </div>
