fixed top delete

--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -1,5 +1,5 @@
 
-<div class="navbar-skills navbar-skills-white navbar-expand-sm navbar-light navbar fixed-top">
+<div class="navbar-skills navbar-skills-white navbar-expand-sm navbar-light navbar">
   <div class="navbar-inner flexbox">
     <%= link_to "/", class: "navbar-brand" do %>
      <%= image_tag("rentskills.png", :alt => "rentskills feed") %>
