--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -1,17 +1,20 @@
 .navbar-skills {
-  background-color: white;
+  background-color: transparent;
   transition: 0.5s background-color ease;
   height: 80px;
+  position: absolute;
 }
 
-
+.navbar-nav {
+  color: white;
+}
 
 .navbar .navbar-collapse {
   flex-grow: 0;
 }
 
 .navbar .navbar-brand img {
-  width: 200px;
+  width: 90px;
 }
 
 .flexbox {
@@ -19,3 +22,4 @@
   justify-content: space-between;
   width: 100%;
 }
+
