--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,7 +13,7 @@
   <body>
     <%= render "shared/navbar" %>
 
-    <p class="notice"><%= notice %></p>
+    <p class="notice m-0"><%= notice %></p>
     <p class="alert"><%= alert %></p>
 
 
