--- a/app/views/courses/show.html.erb
+++ b/app/views/courses/show.html.erb
@@ -2,7 +2,7 @@
   <div class="row">
     <div class="col-md-5">
       <div>
-        <%= image_tag "https://cdn.pixabay.com/photo/2017/08/06/09/14/people-2590564_960_720.jpg", class: "course-img" %>
+        <%= cl_image_tag @course.photo, crop: :fit, class: "course-img" %>
       </div>
     </div>
     <div class="col-md-7">
