--- a/app/views/owner/courses/show.html.erb
+++ b/app/views/owner/courses/show.html.erb
@@ -22,7 +22,7 @@
 
       <p>
         <strong>Address:</strong>
-        <%= @course.location %>
+        <%= @course.address %>
       </p>
 
       <p>
