--- a/app/views/bookings/show.html.erb
+++ b/app/views/bookings/show.html.erb
@@ -29,8 +29,14 @@
 
       <p>
         <strong>Address:</strong>
-        <%= @booking.course.location %>
+        <%= @booking.course.address %>
       </p>
+
+      <div id="map"
+           style="width: 50%; height: 200px;"
+           data-markers="<%= @markers.to_json %>"
+           data-mapbox-api-key="<%= ENV['MAPBOX_API_KEY'] %>">
+      </div>
 
       <p>
         <strong>Price:</strong>
