--- a/app/views/courses/index.html.erb
+++ b/app/views/courses/index.html.erb
@@ -17,4 +17,10 @@
       <% end %>
     </div>
   </div>
+  <br>
+</div>
+<div    id="map"
+        style="width: 50%; height: 400px;"
+        data-markers="<%= @markers.to_json %>"
+        data-mapbox-api-key="<%= ENV['MAPBOX_API_KEY'] %>">
 </div>
