--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -20,5 +20,9 @@
     <%= yield %>
     <%= javascript_include_tag 'application' %>
     <%= javascript_pack_tag 'application' %>
+    <footer style="position: absolute;">
+      <%= render "shared/footer" %>
+    </footer>
   </body>
+
 </html>
