--- a/app/assets/stylesheets/components/_card.scss
+++ b/app/assets/stylesheets/components/_card.scss
@@ -43,3 +43,43 @@
   border-radius: 5px;
   box-shadow: 0 0 15px rgba(0,0,0,0.2);
 }
+
+.card-course-home  {
+  overflow: hidden;
+  background: white;
+  box-shadow: 0 0 15px rgba(0,0,0,0.2);
+}
+
+.card-course-home  > img {
+  height: 200px;
+  width: 100%;
+  object-fit: cover;
+}
+
+.card-course-home  h2 {
+  font-size: 16px;
+  font-weight: bold;
+  margin: 0;
+}
+
+.card-course-home  p {
+  font-size: 12px;
+  opacity: .7;
+  margin: 0;
+}
+
+
+.cardcourse-home p .card-course-home-infos {
+  padding: 16px;
+  display: flex;
+  justify-content: space-between;
+  align-items: flex-end;
+  position: relative;
+}
+
+.card-course-home-infos {
+  position: absolute;
+  right: 16px;
+  top: -20px;
+  width: 40px;
+}
