--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -7,16 +7,34 @@
   <div class="banner" style="background-image: linear-gradient(rgba(0,0,0,0.4),rgba(0,0,0,0.4)), url(https://images.unsplash.com/photo-1496886077455-6e206da90837?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1650&q=80);">
     <div class="container">
       <div class="search-block col-md-5 bg-white rounded p-4">
-        <h2>Find a course !</h2>
+        <h2>Find a course and</h2>
+        <h2>share your interests.</h2>
+        <h6>My interest</h6>
+        <h6>Where</h6>
+        <h6>When</h6>
+        <h6></h6>
         <%= link_to "Find a course", courses_path, class: "btn btn-primary button" %>
       </div>
     </div>
   </div>
-     <div class="banner card bg-dark text-white home-image">
+  <div class="container banner-small mt-5 col-md-10">
+    <div class="banner-small-content rounded" style="background-image: linear-gradient(rgba(0,0,0,0.4),rgba(0,0,0,0.4)), url(https://images.unsplash.com/photo-1556910103-1c02745aae4d?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1650&q=80);">
+    <h2>Find your talents and share it with others</h2>
+    <p>zdjzdjskldjsldjqsljdljzlmkj</p>
+    <%= link_to "Know more",  new_owner_course_path, class: "btn btn-primary button button-banner-small" %>
+    </div>
+  </div>
+  <div class="container selection-location col-md-10 mt-5">
+    <h2>Our selection near your position</h2>
+  </div>
+  <div class="container selection-location col-md-10 mt-5">
+    <h2>Don't miss your chance !</h2>
+  </div>
+<!--      <div class="banner card bg-dark text-white home-image">
       <div class="card-img-overlay d-flex align-items-center justify-content-center">
         <h2 class="card-title"><%= link_to 'See all courses around you', courses_path %></h2>
       </div>
-    </div>
+    </div> -->
 
   </body>
 </html>
