--- a/app/views/courses/index.html.erb
+++ b/app/views/courses/index.html.erb
@@ -8,12 +8,14 @@
     <div class="info-content pl-2 pr-2">
       <div class="cards">
         <% @courses.each do |course| %>
-          <div class="card-courses" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.3))"> <%= cl_image_tag course.photo, crop: :fit %>
-            <%= link_to course_path(course) do %>
-              <h2><%= course.title %></h2>
+          <% if (course.participants - course.bookings.length) != 0 %>
+            <div class="card-courses" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.3))"> <%= cl_image_tag course.photo, crop: :fit %>
+              <%= link_to course_path(course) do %>
+                <h2><%= course.title %></h2>
+              <% end %>
+            </div>
             <% end %>
-          </div>
-        <% end %>
+          <% end %>
       </div>
     </div>
   </div>
