--- a/app/views/owner/courses/edit.html.erb
+++ b/app/views/owner/courses/edit.html.erb
@@ -9,6 +9,7 @@
         <%= c.input :duration%>
         <%= c.input :date %>
         <%= c.input :price %>
+        <%= c.input :participants %>
         <%= c.input :photo %>
         <%= c.input :photo_cache, as: :hidden %>
         <%= c.submit class: 'btn btn-primary form-button mt-2' %>
