--- a/app/views/courses/index.html.erb
+++ b/app/views/courses/index.html.erb
@@ -4,6 +4,15 @@
     <%= link_to "Your Bookings", bookings_path, :class => "btn p-3 m-3 button btn-secondary" %>
   </div>
 
+  <%= form_tag courses_path, method: :get do %>
+  <%= text_field_tag :query,
+    params[:query],
+    class: "form-control",
+    placeholder: "Find a course aroud you"
+  %>
+  <%= submit_tag "Search", class: "btn btn-primary" %>
+<% end %>
+
   <div class="d-flex owner-dashboard">
     <div class="info-content pl-2 pr-2">
       <div class="cards">
