--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -1,8 +1,12 @@
 .navbar-skills {
-  background-color: transparent;
+  background-color: white;
   transition: 0.5s background-color ease;
   height: 80px;
-  position: absolute;
+}
+
+.navbar-for-home {
+  background-color: transparent;
+  height: 80px;
 }
 
 .navbar .navbar-collapse {
