--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -1,9 +1,8 @@
-
-<div class="navbar-skills w-100 navbar-skills-white navbar-expand-sm navbar-light navbar">
+<div class="navbar-skills w-100 navbar-skills-white navbar-expand-sm navbar-light navbar <%= "navbar-for-home" if action_name == "home" %>">
 
   <div class="navbar-inner flexbox">
     <%= link_to "/", class: "navbar-brand" do %>
-      <%= image_tag("skale-white.png", :alt => "rentskills feed", class: "logo") %>
+      <%= image_tag(action_name == "home" ? "skale-white.png" : "skale.png", :alt => "rentskills feed", class: "logo") %>
     <% end %>
 
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
