courses show front

--- a/app/views/courses/show.html.erb
+++ b/app/views/courses/show.html.erb
@@ -7,11 +7,7 @@
     </div>
     <div class="col-md-7">
       <p>
-        <%= image_tag "https://kitt.lewagon.com/placeholder/users/Artmen12", class: "avatar" %>
-        <strong>Your email:</strong>
-      </p>
-      <p>
-        <h1 class="text-center"> <%= @course.title %> </h1>
+        <h1> <%= @course.title %> </h1>
       </p>
 
       <br>
@@ -29,11 +25,6 @@
         <strong>Address:</strong>
         <%= @course.address %>
       </p>
-      <div id="map"
-           style="width: 50%; height: 200px;"
-           data-markers="<%= @markers.to_json %>"
-           data-mapbox-api-key="<%= ENV['MAPBOX_API_KEY'] %>">
-      </div>
 
       <p>
         <strong>Available places:</strong>
@@ -42,6 +33,7 @@
         <% else %>
           <%= @course.participants - @course.bookings.length %>
         <% end %>
+
       </p>
 
       <p>
@@ -50,8 +42,8 @@
       </p>
 
       <p>
-        <strong>When </strong>
-        <%= @course.date %>
+        <strong>When: </strong>
+        <%= @course.date.strftime("%A %d %B %Y, %H:%M") %>
       </p>
 
       <% if @course.bookings == [] %>
@@ -71,6 +63,11 @@
       <%= link_to courses_path, :class => "btn p-3 mr-3 mb-4 button btn-secondary" do %>
         <i class="fas fa-long-arrow-alt-left"> Back</i>
       <% end %>
+    </div>
+    <div id="map"
+         style="width: 100%; height: 200px;"
+         data-markers="<%= @markers.to_json %>"
+         data-mapbox-api-key="<%= ENV['MAPBOX_API_KEY'] %>">
     </div>
   </div>
 </div>
