--- a/app/assets/stylesheets/components/_images.scss
+++ b/app/assets/stylesheets/components/_images.scss
@@ -1,3 +1,8 @@
 .course-img {
   width: 400px;
+  border-radius: 5px;
+  margin-top: 50px;
+  height: 300px;
+  object-fit: cover;
+  object-position: center;
 }
