--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -8,6 +8,10 @@
           <%= f.error_notification %>
 
           <div class="form-inputs">
+            <%= f.input :username,
+                        required: true,
+                        autofocus: true,
+                        input_html: { autocomplete: "username" }%>
             <%= f.input :email,
                         required: true,
                         autofocus: true,
@@ -19,6 +23,8 @@
             <%= f.input :password_confirmation,
                         required: true,
                         input_html: { autocomplete: "new-password" } %>
+            <%= f.input :avatar,
+                        required: true %>
           </div>
 
           <div class="form-actions">
