--- a/app/assets/stylesheets/components/_button.scss
+++ b/app/assets/stylesheets/components/_button.scss
@@ -12,3 +12,15 @@
    border: $blue-water;
   }
 }
+
+.search-btn {
+  background-color: #84C8AE;
+  color: black;
+  width: 200px;
+  height: 30px;
+  padding-top: 5px;
+}
+
+.search-input {
+  width: 500px;
+}
