--- a/app/assets/stylesheets/components/_map.scss
+++ b/app/assets/stylesheets/components/_map.scss
@@ -1,23 +1,21 @@
-.mapboxgl-popup {
-  max-width: 220px;
-  img {
-    width: 100%;
-    height: 140px;
-    object-fit: cover;
-    object-position: center;
-  }
-  h3 {
-    font-size: 20px;
-  }
-}
+// .mapboxgl-popup {
+//   max-width: 220px;
+//   img {
+//     width: 100%;
+//     height: 140px;
+//     object-fit: cover;
+//     object-position: center;
+//   }
+//   h3 {
+//     font-size: 20px;
+//   }
+// }
 
-.mapboxgl-popup-content {
-  text-align: center;
-  font-family: 'Roboto', sans-serif;
-  padding: 0 !important;
-  border-radius: 16px !important;
-  overflow: hidden !important;
-}
-
-
+// .mapboxgl-popup-content {
+//   text-align: center;
+//   font-family: 'Roboto', sans-serif;
+//   padding: 0 !important;
+//   border-radius: 16px !important;
+//   overflow: hidden !important;
+// }
 
