--- a/app/views/courses/index.html.erb
+++ b/app/views/courses/index.html.erb
@@ -26,9 +26,8 @@
             <% @courses.each do |course| %>
               <% if (course.participants - course.bookings.length) != 0 %>
                   <%= link_to course_path(course) do %>
-                    <div class="card-category" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.3))">
-                      <%= cl_image_tag course.photo, crop: :fit %>
-                      <h2><%= course.title %></h2>
+                    <div class="card-courses" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.3)), url(<%= cl_image_path course.photo, crop: :fit %>)">
+                      <h2 class="text-white"><%= course.title %></h2>
                     </div>
                   <% end %>
               <% end %>
