--- a/app/views/owner/courses/edit.html.erb
+++ b/app/views/owner/courses/edit.html.erb
@@ -3,16 +3,17 @@
     <div class="forms col-xs-12 col-sm-10 col-sm-offset-1 rounded p-5 bg-white mb-5">
       <h1 class="">Ajouter un cours</h1>
       <hr class="line-form mb-5">
-      <%= simple_form_for [:owner, @course] do |c| %>
-        <%= c.input :title, placeholder: 'Cours de sabre laser' %>
-        <%= c.input :description, as: :text, placeholder: 'Formé auprès de maitre Obiwan lui même, je vous propose mes services...'  %>
-        <%= c.input :duration%>
-        <%= c.input :date %>
-        <%= c.input :price %>
-        <%= c.input :participants %>
-        <%= c.input :photo %>
-        <%= c.input :photo_cache, as: :hidden %>
-        <%= c.submit class: 'btn btn-primary form-button mt-2' %>
+      <%= simple_form_for [:owner, @course] do |f| %>
+        <%= f.input :title, placeholder: 'Cours de sabre laser' %>
+        <%= f.input :description, as: :text, placeholder: 'Formé auprès de maitre Obiwan lui même, je vous propose mes services...'  %>
+        <%= f.input :address %>
+        <%= f.input :duration, label: "Duration (min)" %>
+        <%= f.input :date %>
+        <%= f.input :participants, label: "Participants max" %>
+        <%= f.input :price, label: "Price (€)" %>
+        <%= f.input :photo %>
+        <%= f.input :photo_cache, as: :hidden %>
+        <%= f.submit class: 'btn btn-primary button mt-2' %>
       <% end %>
     </div>
   </div>
