--- a/app/views/owner/courses/index.html.erb
+++ b/app/views/owner/courses/index.html.erb
@@ -14,7 +14,7 @@
         <% @courses.each do |course| %>
           <%= link_to owner_course_path(course) do %>
             <div class="card-courses" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.3)), url(<%= cl_image_path course.photo, crop: :fit %>)">
-              <h2><%= course.title %></h2>
+              <h2 class="text-white"><%= course.title %></h2>
             </div>
           <% end %>
         <% end %>
