--- a/app/views/bookings/index.html.erb
+++ b/app/views/bookings/index.html.erb
@@ -12,8 +12,8 @@
     <div class="cards">
       <% @bookings.each do |booking| %>
         <%= link_to course_booking_path(booking.course, booking) do %>
-          <div class="card-courses" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.3))"> <%= cl_image_tag booking.course.photo, crop: :fit %>
-            <h2><%= booking.course.title %></h2>
+          <div class="card-courses" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.3)), url(<%= cl_image_path booking.course.photo, crop: :fit %>)">
+            <h2 class="text-white"><%= booking.course.title %></h2>
           </div>
         <% end %>
       <% end %>
