--- a/app/views/owner/courses/show.html.erb
+++ b/app/views/owner/courses/show.html.erb
@@ -7,7 +7,7 @@
       <h1 class="text-center"> <%= @course.title %> </h1>
       <p>
         <%= image_tag "https://kitt.lewagon.com/placeholder/users/Artmen12", class: "avatar" %>
-        <strong>Organisé par</strong>
+        <strong>Organised by:</strong>
         <%= @course.user.username %>
       </p>
       <p>
