--- a/app/assets/stylesheets/components/_banner.scss
+++ b/app/assets/stylesheets/components/_banner.scss
@@ -14,6 +14,13 @@
   height: 700px;
   color: black;
   margin-top: -80px;
+  .button-banner {
+    position: absolute;
+    bottom: 50px;
+  }
+  .form-banner {
+    margin-top: 50px;
+  }
 }
 
 .banner h1 {
@@ -26,9 +33,10 @@
 
 .banner p {
   font-size: 20px;
-  color: white;
-  opacity: .7;
-  text-shadow: 1px 1px 3px rgba(0,0,0,0.2);
+  color: $grey;
+  margin-top: 15px;
+  // opacity: .7;
+  // text-shadow: 1px 1px 3px rgba(0,0,0,0.2);
 }
 
 .search-block {
@@ -44,7 +52,7 @@
   background-position: bottom;
   position: relative;
   height: 100%;
-  padding: 65px;
+  padding: 57px;
   //background-position: center;
   color: white;
   h2 {
@@ -53,5 +61,9 @@
   .button-banner-small {
     position: absolute;
     bottom: 40px;
+  }
+  p {
+    font-size: 18px;
+    margin: 0;
   }
 }
