--- a/app/assets/stylesheets/components/_sidebar.scss
+++ b/app/assets/stylesheets/components/_sidebar.scss
@@ -1,6 +1,6 @@
 .sidebar {
 color: black !important;
-border-right: solid 1px black;
+border-right: solid 2px #83c8ae;
 text-align: center;
   img {
     width: 150px;
