--- a/app/views/bookings/index.html.erb
+++ b/app/views/bookings/index.html.erb
@@ -10,11 +10,14 @@
 
   <div class="d-flex owner-dashboard">
     <div class="info-content pl-2 pr-2">
-      <div class="cards">
+      <div class="cards-index">
         <% @bookings.each do |booking| %>
           <%= link_to course_booking_path(booking.course, booking) do %>
-            <div class="card-courses" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.3)), url(<%= cl_image_path booking.course.photo, crop: :fit %>)">
-              <h2 class="text-white"><%= booking.course.title %></h2>
+            <div class="card text-center" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.3)), url(<%= cl_image_path booking.course.photo, crop: :fit %>)">
+              <div class="info">
+                <h1><%= booking.course.title %></h1>
+                <p> <%= booking.course.description %></p>
+              </div>
             </div>
           <% end %>
         <% end %>
@@ -22,3 +25,4 @@
     </div>
   </div>
 </div>
+
