--- a/app/views/courses/index.html.erb
+++ b/app/views/courses/index.html.erb
@@ -22,12 +22,15 @@
 
       <div class="d-flex owner-dashboard">
         <div class="info-content pl-2 pr-2">
-          <div class="cards">
+          <div class="cards-index">
             <% @courses.each do |course| %>
               <% if (course.participants - course.bookings.length) != 0 %>
                   <%= link_to course_path(course) do %>
-                    <div class="card-courses" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.3)), url(<%= cl_image_path course.photo, crop: :fit %>)">
-                      <h2 class="text-white"><%= course.title %></h2>
+                    <div class="card text-center" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.3)), url(<%= cl_image_path course.photo, crop: :fit %>)">
+                      <div class="info">
+                        <h1><%= course.title %></h1>
+                        <p> <%= course.description %></p>
+                      </div>
                     </div>
                   <% end %>
               <% end %>
