--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -55,13 +55,17 @@
 
   <div class="container selection-location col-md-10 mt-5">
     <h2>Don't miss your chance !</h2>
-    <div class="cards-last-chance">
+    <br>
+    <div class="cards-index">
       <% @courses.each do |course| %>
         <% if (course.participants.to_i - course.bookings.length) <= 2 && (course.participants.to_i - course.bookings.length) > 0 %>
-          <div class="card-courses" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.3)), url(<%= cl_image_path course.photo, crop: :fit %>)">            <%= link_to course_path(course) do %>
-              <h2><%= course.title %></h2>
-            <% end %>
-          </div>
+          <%= link_to course_path(course) do %>
+            <div class="card text-center" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.3)), url(<%= cl_image_path course.photo, crop: :fit %>)">
+              <div class="info">
+                <h1><%= course.title %></h1>
+              </div>
+            </div>
+          <% end %>
           <% end %>
         <% end %>
     </div>
