--- a/app/views/owner/courses/new.html.erb
+++ b/app/views/owner/courses/new.html.erb
@@ -1,4 +1,26 @@
-<div class="container mt-5">
+<div class="banner-new mt-5">
+  <div class="container">
+    <div class="container banner-small col-md-12 mt-4">
+      <h3>Create a course</h3>
+      <br>
+      <br>
+      <h1>Find your talents and share it with</h1>
+      <h1>people around you.</h1>
+      <%= link_to "Begin",  {:anchor => "form" }, class: "btn btn-primary button button-banner" %>
+    </div>
+  </div>
+</div>
+
+<div class="banner-new2">
+  <div class="container">
+    <h1 class="mb-5">What is our concept ?</h1>
+    <h4>Everyone has hidden skills. Here is the place to share them with other people in your city. </h4></br>
+    <h4>Create a course, choose a theme and spend an unforgivable experience with your hosts !</h4>
+  </div>
+  <div class="banner col-md-4 offset-2 banner-new2-img" style="background-image: linear-gradient(rgba(0,0,0,0.4),rgba(0,0,0,0.4)), url(https://images.unsplash.com/photo-1496886077455-6e206da90837?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1650&q=80);"></div>
+</div>
+
+<div class="container mt-5" id="form">
   <div class="row justify-content-center">
     <div class="forms col-xs-12 col-sm-10 col-sm-offset-1 rounded p-5 bg-white mb-5">
       <h1 class="">Ajouter un cours</h1>
