--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -43,7 +43,7 @@
                 <h2><%= course_near.title %></h2>
                 <p><strong>Bordeaux</strong></p>
                 <div class="infos-time-participants">
-                  <p><strong><%= course_near.duration %></strong></p>
+                  <p><strong><%= course_near.duration %>min</strong></p>
                   <p><strong class="infos-price"><%= course_near.price %>€/pers</strong></p>
                 </div>
               </div>
