--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -1,5 +1,5 @@
 <div class="container col-md-10">
-  <ul class="link-footer pt-3">
+  <ul class="d-flex link-footer pt-3 justify-content-around">
     <li><%= link_to "Home", root_path %></li>
     <li><%= link_to "Find a course", courses_path %></li>
     <li><%= link_to "My profile", owner_courses_path, method: :get %></li>
