--- a/app/views/bookings/show.html.erb
+++ b/app/views/bookings/show.html.erb
@@ -49,11 +49,11 @@
       </p>
 
 
-  <%= link_to bookings_path, :class => "btn p-3 mr-3 mb-4 form-button btn-secondary" do %>
+  <%= link_to bookings_path, :class => "btn p-3 mr-3 mb-4 button btn-secondary" do %>
     <i class="fas fa-long-arrow-alt-left"> Back</i>
   <% end %>
 
-  <%= link_to booking_path, method: :delete, :class => "btn p-3 mr-3 mb-4 form-button btn-danger" do %>
+  <%= link_to booking_path, method: :delete, :class => "btn p-3 mr-3 mb-4 button btn-danger" do %>
   <i class="fas fa-trash-alt"> Delete</i>
   <% end %>
 
